MySQL + Spring Docker Compose